force-app/main/default/objects/MUSW__Review__c/fields/CVRD_DS_Comments__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>