force-app/main/default/objects/MUSW__Review__c/fields/CVRD_DS_External_Referral_Agency__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_External_Referral_Agency__c</fullName>
    <label>External Referral Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_External_Referral_Agency</valueSetName>
    </valueSet>
</CustomField>