force-app/main/default/objects/MUSW__Review__c/fields/CVRD_DS_Internal_Referral_Division__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Internal_Referral_Division__c</fullName>
    <label>Internal Referral Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_Internal_Referral_Division</valueSetName>
    </valueSet>
</CustomField>