force-app/main/default/objects/MUSW__Review__c/fields/CVRD_DS_Planner__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>