force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status__c</fullName>
    <description>Current status of the review.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MUSW__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>