force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan Review</fullName>
            </value>
            <value>
                <fullName>Admin Review</fullName>
            </value>
            <value>
                <fullName>Electrical Review</fullName>
            </value>
            <value>
                <fullName>Planner Review</fullName>
            </value>
            <value>
                <fullName>Preliminary Review</fullName>
            </value>
            <value>
                <fullName>Referral Review</fullName>
            </value>
            <value>
                <fullName>Appeal Review</fullName>
            </value>
            <value>
                <fullName>Referred Back From Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>