force-app/main/default/objects/MUSW__Review__c/validationRules/CVRD_DS_Comment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CVRD_DS_Comment_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  MUSW__Completed_Action__c , &quot;Corrections Required&quot;),
ISBLANK(  CVRD_DS_Comments__c )
)</errorConditionFormula>
    <errorDisplayField>CVRD_DS_Comments__c</errorDisplayField>
    <errorMessage>Comment is Required.</errorMessage>
</ValidationRule>