force-app/main/default/objects/MUSW__Review__c/validationRules/CVRD_DS_Completed_action_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CVRD_DS_Completed_action_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        NOT(ISPICKVAL(MUSW__Status__c, &quot;Completed&quot;)),
        NOT(ISPICKVAL(MUSW__Completed_Action__c, &quot;&quot;))
    ),
    AND(
        ISPICKVAL(MUSW__Status__c, &quot;Completed&quot;),
        ISPICKVAL(MUSW__Completed_Action__c, &quot;&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>MUSW__Completed_Action__c</errorDisplayField>
    <errorMessage>Completed Action is only required when status is set to &apos;Completed&apos;!</errorMessage>
</ValidationRule>