force-app/main/default/objects/MUSW__Review__c/validationRules/CVRD_DS_Completed_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>CVRD_DS_Completed_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name !=&apos;System Administrator&apos; &amp;&amp; ISPICKVAL(MUSW__Type__c, &apos;Preliminary Review&apos;)   &amp;&amp;  ISPICKVAL( MUSW__Status__c , &apos;Completed&apos;) &amp;&amp;   ISPICKVAL( PRIORVALUE(MUSW__Completed_Action__c) , &apos;Approved&apos;) &amp;&amp; ISCHANGED(MUSW__Completed_Action__c)</errorConditionFormula>
    <errorDisplayField>MUSW__Completed_Action__c</errorDisplayField>
    <errorMessage>Preliminary Review action cannot be changed once approved please contact system admin</errorMessage>
</ValidationRule>